fix: dashboard z-index

--- a/TokynoSora.css
+++ b/TokynoSora.css
@@ -277,10 +277,7 @@ body:is(url(})) {
 }
 
 /*噗文展開時覆蓋其他物件*/
-#timeline_holder:has(.link_extend.plurk_box) {
-  z-index: 1400;
-}
-/*噗文點開時覆蓋其他物件*/
+#timeline_holder:has(.link_extend.plurk_box),
 #timeline_cnt:has(.cboxAnchor.link_extend:hover) {
   z-index: 1200;
 }
@@ -655,7 +652,7 @@ body:is(url(})) {
   backdrop-filter: saturate(var(--blur-saturate)) blur(var(--blur-px));
   -webkit-backdrop-filter: saturate(var(--blur-saturate)) blur(var(--blur-px));
   transform: translate(540px, 0);
-  z-index: 1300;
+  z-index: 1500;
 }
 .dash-group-right:hover,
 :is(url({)),
